--- a/index.html
+++ b/index.html
@@ -8,21 +8,19 @@
 </head>
 
 <body>
+<h1>Swap first and last letters</h1>
 
-
-
-<section id="introScreen">
-    <h1>Swap first and last letters</h1>
+<button type="button" id="start">Start!</button>
+     
+<section id="normalScreen">
+    <ul id="firstUl"></ul> 
     <br>   
-    <div>
-        <button id="start">Start!</button>
-    </div> 
+    <button type="button" id="swap">Swap!</button>
 </section>
 
 <section id="swappedScreen">
-   <div>  
-       <button id="swap">Swap!</button>
-    </div>  
+    <ul id="secondUl"></ul> 
+
 </section>
 
 
